# rule1-ds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  download_base.sh  download_large.sh  run.sh
input/base/: pace25_exact_001.gr.bz2  pace25_exact_002.gr.bz2  pace25_exact_003.gr.bz2  pace25_exact_004.gr.bz2  pace25_exact_005.gr.bz2  pace25_exact_006.gr.bz2  pace25_exact_007.gr.bz2  pace25_exact_008.gr.bz2  pace25_exact_009.gr.bz2
scripts/: plot.py  plot_girgs.py  run.py  run_girgs.py
src/: domset.rs  graph.rs  greedy.rs  io.rs  iter_greedy.rs  main.rs  marker.rs  radix.rs  rule1.rs
