[package]
name = "rule1"
version = "0.1.0"
edition = "2024"

[dependencies]
array-init = "2.1.0"
itertools = "0.14.0"
num = "0.4.3"
rand = "0.9.1"
rand_pcg = "0.9.0"
smallvec = "1.15.1"
stream_bitset = { path="stream-bitset" }
structopt = "0.3.26"

[profile.release]
lto="fat"
codegen-units=1
strip=true
